examples/test/testpolicy4290.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4290
  namespace: namespace235
spec:
  podSelector:
    matchLabels:
      key24: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value44
          key7: value30
          key1: value35
      podSelector:
        matchLabels:
          key37: value9
          key31: value4
          key10: value28
